# torch-ugens

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  regenerate
.github/workflows/: pluginbuild.yml
plugins/Torch/: Next.cpp  Torch.cpp  Torch.hpp  Torch.sc  Torch.schelp
